@@ -1,7 +1,7 @@
 # ----------------------------------------------------------------------------
 #  widget.tcl
 #  This file is part of Unifix BWidget Toolkit
-#  $Id: widget.tcl,v 1.29 2005/07/28 00:40:42 hobbs Exp $
+#  $Id: widget.tcl,v 1.30 2006/11/10 22:45:51 dev_null42a Exp $
 # ----------------------------------------------------------------------------
 #  Index of commands:
 #     - Widget::tkinclude
@@ -480,6 +480,8 @@ proc Widget::syncoptions { class subclass subpath options } {
 # ----------------------------------------------------------------------------
 proc Widget::init { class path options } {
     variable _inuse
+    variable _class
+    variable _optiontype
 
     upvar 0 ${class}::opt classopt
     upvar 0 ${class}::$path:opt  pathopt
@@ -532,7 +534,7 @@ proc Widget::init { class path options } {
     if {![info exists _inuse($class)]} { set _inuse($class) 0 }
     incr _inuse($class)
 
-    set Widget::_class($path) $class
+    set _class($path) $class
     foreach {option value} $options {
         if { ![info exists classopt($option)] } {
             unset pathopt
@@ -546,7 +548,7 @@ proc Widget::init { class path options } {
             set optdesc $classopt($option)
             set type    [lindex $optdesc 0]
         }
-        set pathopt($option) [$Widget::_optiontype($type) $option $value [lindex $optdesc 3]]
+        set pathopt($option) [$_optiontype($type) $option $value [lindex $optdesc 3]]
 	set pathinit($option) $pathopt($option)
     }
 }
@@ -569,6 +571,8 @@ proc Widget::init { class path options } {
 #  Command Widget::copyinit
 # ----------------------------------------------------------------------------
 proc Widget::copyinit { class templatepath path options } {
+    variable _class
+    variable _optiontype
     upvar 0 ${class}::opt classopt \
 	    ${class}::$path:opt	 pathopt \
 	    ${class}::$path:mod	 pathmod \
@@ -589,7 +593,7 @@ proc Widget::copyinit { class templatepath path options } {
     array set pathopt  [array get templatepathopt]
     array set pathinit [array get templatepathinit]
 
-    set Widget::_class($path) $class
+    set _class($path) $class
     foreach {option value} $options {
 	if { ![info exists classopt($option)] } {
 	    unset pathopt
@@ -603,7 +607,7 @@ proc Widget::copyinit { class templatepath path options } {
 	    set optdesc $classopt($option)
 	    set type	[lindex $optdesc 0]
 	}
-	set pathopt($option) [$Widget::_optiontype($type) $option $value [lindex $optdesc 3]]
+	set pathopt($option) [$_optiontype($type) $option $value [lindex $optdesc 3]]
 	set pathinit($option) $pathopt($option)
     }
 }
@@ -625,6 +629,7 @@ proc Widget::copyinit { class templatepath path options } {
 #		the command line in which that portion is interested.
 
 proc Widget::parseArgs {class options} {
+    variable _optiontype
     upvar 0 ${class}::opt classopt
     upvar 0 ${class}::map classmap
     
@@ -643,7 +648,7 @@ proc Widget::parseArgs {class options} {
 	    # Make sure that the widget used for this TkResource exists
 	    Widget::_get_tkwidget_options [lindex [lindex $optdesc 3] 0]
 	}
-	set val [$Widget::_optiontype($type) $option $val [lindex $optdesc 3]]
+	set val [$_optiontype($type) $option $val [lindex $optdesc 3]]
 		
 	if { [info exists classmap($option)] } {
 	    foreach {subpath subclass realopt} $classmap($option) {
@@ -825,11 +830,12 @@ proc Widget::configure { path options } {
 #  Command Widget::cget
 # ----------------------------------------------------------------------------
 proc Widget::cget { path option } {
-    if { ![info exists ::Widget::_class($path)] } {
+    variable _class
+    if { ![info exists _class($path)] } {
         return -code error "unknown widget $path"
     }
 
-    set class $::Widget::_class($path)
+    set class $_class($path)
     if { ![info exists ${class}::opt($option)] } {
         return -code error "unknown option \"$option\""
     }
@@ -854,7 +860,8 @@ proc Widget::cget { path option } {
 #  Command Widget::subcget
 # ----------------------------------------------------------------------------
 proc Widget::subcget { path subwidget } {
-    set class $::Widget::_class($path)
+    variable _class
+    set class $_class($path)
     upvar 0 ${class}::$path:opt pathopt
     upvar 0 ${class}::map$subwidget submap
     upvar 0 ${class}::$path:init pathinit
@@ -873,8 +880,9 @@ proc Widget::subcget { path subwidget } {
 #  Command Widget::hasChanged
 # ----------------------------------------------------------------------------
 proc Widget::hasChanged { path option pvalue } {
-    upvar    $pvalue value
-    set class $::Widget::_class($path)
+    variable _class
+    upvar $pvalue value
+    set class $_class($path)
     upvar 0 ${class}::$path:mod pathmod
 
     set value   [Widget::cget $path $option]
@@ -885,7 +893,8 @@ proc Widget::hasChanged { path option pvalue } {
 }
 
 proc Widget::hasChangedX { path option args } {
-    set class $::Widget::_class($path)
+    variable _class
+    set class $_class($path)
     upvar 0 ${class}::$path:mod pathmod
 
     set result  $pathmod($option)
@@ -938,7 +947,8 @@ proc Widget::getoption { path option } {
 #	value	option value.
 
 proc Widget::getMegawidgetOption {path option} {
-    set class $::Widget::_class($path)
+    variable _class
+    set class $_class($path)
     upvar 0 ${class}::${path}:opt pathopt
     set pathopt($option)
 }
@@ -958,7 +968,8 @@ proc Widget::getMegawidgetOption {path option} {
 #	value	option value.
 
 proc Widget::setMegawidgetOption {path option value} {
-    set class $::Widget::_class($path)
+    variable _class
+    set class $_class($path)
     upvar 0 ${class}::${path}:opt pathopt
     set pathopt($option) $value
 }
